# esp-fungi

./: .gitignore  Cargo.toml  README.md  cfg.toml
.cargo/: config.toml
src/: chip_control.rs  config.rs  controls.rs  display.rs  error.rs  main.rs  mister.rs  network.rs  sensor.rs  utils.rs
src/network/: mod.rs  wifi.rs
src/network/api/: core.rs  mod.rs  utils.rs
src/network/api/routes/: chip_control.rs  config.rs  mod.rs  mode.rs  status.rs
src/network/api/types/: mod.rs
