[package]
name = "esp-fungi"
version = "0.1.0"
authors = ["David Radunz <david@vimtura.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[dependencies]
log = { version = "0.4.20" }
static_cell = { version = "=1.2.0", features = ["nightly"] }

esp-hal = { version = "0.16.0", features = [ "esp32", "async", "embassy", "embassy-time-timg0", "embassy-executor-thread", "embassy-integrated-timers"] }
esp-backtrace = { version = "0.11.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.9.0", features = ["esp32", "log"] }
esp-alloc = { version = "0.3.0" }
esp-wifi = { version = "0.4.0", features = [
    "esp32",
    "phy-enable-usb",
    "utils",
    "wifi-default",
    "embassy-net"
] }

heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }

embedded-svc = { version = "0.27.1", default-features = false, features = [] }
embedded-io = "0.6.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

embassy-executor = { version = "0.5.0", features = ["nightly", "integrated-timers", "executor-thread"] }
embassy-sync = "0.5.0"
embassy-time = "0.3.0"
embassy-futures = "0.1.0"
embassy-net = { version = "0.4.0", features = ["medium-ip", "tcp", "medium-ethernet", "dhcpv4", "log", "udp"] }
embassy-net-driver = "0.2.0"