[package]
name = "esp-fungi"
version = "0.1.0"
authors = ["David Radunz <david@vimtura.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev.package.esp-storage]
opt-level = 3

[features]
default = ["hdc1080"]
hdc1080 = ["embedded-hdc1080-rs"]

[dependencies]
log = { version = "0.4.20" }
static_cell = { version = "=1.2.0", features = ["nightly"] }
spin = { version = "0.9.8", features = ["rwlock"] }

esp-hal = { version = "0.16.0", features = [ "esp32", "async", "rt", "vectored", "embassy", "embassy-time-timg0", "embassy-executor-thread", "embassy-integrated-timers"] }
esp-backtrace = { version = "0.11.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.9.0", features = ["esp32", "log"] }
esp-alloc = { version = "0.3.0" }
esp-wifi = { version = "0.4.0", features = [
    "esp32",
    "phy-enable-usb",
    "utils",
    "wifi",
    "wifi-default",
    #"wifi-logs",
    "embassy-net",
    "async",
] }
esp-storage = { version = "0.3.0", features = ["esp32"] }

heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }

embedded-svc = { version = "0.27.1", default-features = false, features = [] }
embedded-io = {  version = "0.6.1" }
embedded-hal = { version = "1.0.0" }
embedded-hal-async = {  version = "1.0.0" }
embedded-storage = { version = "0.3.1" }

embassy-executor = { version = "0.5.0", features = ["nightly", "integrated-timers", "executor-thread"] }
embassy-sync = { version = "0.5.0" }
embassy-time = { version = "0.3.0" }
embassy-futures = { version = "0.1.0" }
embassy-net = { version = "0.4.0", features = ["medium-ip", "tcp", "medium-ethernet", "dhcpv4", "log", "udp"] }
embassy-net-driver = {  version = "0.2.0" }

fugit = { version = "0.3.7" }
num-traits = { version = "0.2.17", features = ["libm"], default-features = false }

ssd1306 = { version = "0.8.4"  }
embedded-graphics = { version = "0.8.1" }
display-interface = { version = "0.4.1" }

embedded-hdc1080-rs = { version = "0.1.0", optional = true }